tests/harness/errors/005_free_var.eu
#!/usr/bin/env eu


x: nonesuch
